...
                
                VStack(spacing: 10.0) {
                    HStack {
                        Text("Name:")
                            .font(.headline)
                        
                        TextField("Enter a nickname", text: $newBee.name)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .id("nameTextField")
                    }
                    
                    if let beeDate = newBee.date {
                        DetailRow(
                            title: "Date spotted",
                            caption: Utils.dateTimeFormatter.string(from: beeDate))
                    }
                    
                    if !newBee.detections.isEmpty {
                        HStack {
                            Text("Detected bee:")
                                .font(.headline)
                            
                            Spacer()
                            
                            AnimationView(
                                imageSize: CGSize(width: 200, height: 200),
...
                            .shadow(radius: 7)
                        }
                        
                        if researchMode && newBee.videoURL != nil {
                            if self.detections != 0 || self.interpolations != 0 || self.time != 0.0 {
                                DetailRow(
                                    title: "Detections",
                                    caption: "\(self.detections)")
                                
                                DetailRow(
                                    title: "Interpolations",
                                    caption: "\(self.interpolations)")
                                
...
                                }
                            }
                            
                            Button("Predict using \(Int(self.imagesToSend)) frames") {
                                self.selectedImages = []
                                sendImagesToAPI()
                            }.accessibility(identifier: "Predict")
                            Slider(value: $imagesToSend, in: 1...20, step: 1)
                                .padding(.horizontal)
                            
                            Picker("Selection method", selection: $selectionMethod) {
                                ForEach(Method.allCases, id: \.id) { method in
                                    Text(method.rawValue)
...
                                }
                            }
                        }
                        
                        if !newBee.predictions.isEmpty {
                            HStack {
                                Text("Predictions:")
                                    .font(.headline)
                                Spacer()
                            }
                            
                            ForEach(newBee.predictions.filter { $0.confidence >= 0.1 }, id: \.self) { prediction in
                                HStack {
...
                        }
                    }
                    
                    VStack {
                        HStack(spacing: 10.0) {
                            FilledButton(
                                title: "Select a video",
                                disabled: self.isShowActivity != ""
                            ) {
                                self.isShowActionSheet = true
                            }
                            
                            FilledButton(
                                title: "Detect",
                                disabled: self.isShowActivity != "" || (newBee.videoURL == nil && newBee.profileImage == nil)
                            ) {
                                detectPressed()
                            }
                        }
                        .padding()
                        .shadow(radius: 7)
                    }
                }
            }
            .navigationBarTitle(newBee.name == "" ? "Add a new bee" : newBee.name)
            
        }.actionSheet(isPresented: $isShowActionSheet) {
            ActionSheet(
                title: Text("Select video source"),
                message: nil,
                buttons: [
                    ActionSheet.Button.default(Text("Photo Library"), action: {
                        self.imagePickerMediaType = .photoLibrary
                        self.isShowImagePicker = true
                    }),
                    ActionSheet.Button.default(Text("Camera"), action: {
                        self.imagePickerMediaType = .camera
                        self.isShowImagePicker = true
...
                    ActionSheet.Button.cancel()
                ])
        }.sheet(isPresented: $isShowImagePicker, onDismiss: { beePicked() }) {
            ImagePicker(sourceType: imagePickerMediaType, selectedImage: self.$newBee.profileImage, selectedVideoUrl: self.$newBee.videoURL)
        }
        .toolbar {
            Button("Save") { savePressed() }.disabled(self.newBee.videoURL == nil || self.isShowActivity != "" || self.newBee.detections.isEmpty)
        }
    }
}


extension AddBeeView {
...
        }
    }
    
    func detectPressed() {
        if let url = newBee.videoURL {
            // video
            self.isShowActivity = "Detecting"
            self.changesToDetections = true
            
            self.newBee.detections = []
            self.newBee.predictions = []
            
            DispatchQueue(label: "beeDetection").async {
...
                sendImagesToAPI()
            }
        }
    }
    
    func sendImagesToAPI() {
        self.isShowActivity = "Predicting"
        
        self.newBee.predictions = []
        
        DispatchQueue(label: "request").async {
            self.selectedImages = Requests.sendImages(images: newBee.detections, imagesToSend: Int(self.imagesToSend), method: selectionMethod) { json in
                // parse json into the classifications array
...
