...
                leading: NavigationLink(destination: ResearchView(researchToggle: $researchToggle)) {
                    Image(systemName: "command.circle" + (researchToggle ? ".fill" : ""))
                },
                trailing:
                NavigationLink(destination: AddBeeView(researchMode: researchToggle)) {
                    Image(systemName: "plus")
                }.accessibility(identifier: "Add new bee")
            )
        }
    }
}

struct ContentView_Previews: PreviewProvider {
...
